@@ -1,3 +1,10 @@
+2007-06-19  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* source/org/jfree/chart/axis/CategoryAxis.java
+	(drawCategoryLabels): Removed (previously deprecated).
+
+----------  JFREECHART 1.0.6 RELEASED ------------------------
+
 2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>
 
 	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
